# Algorithms_Practise

./: .gitignore  Algorithm.cpp  Algorithm.h  CMakeLists.txt  Count_Primes.cpp  Count_Primes.h  FirstDuplicateNumber.cpp  FirstDuplicateNumber.h  Longest_Common_Prefix.cpp  Longest_Common_Prefix.h  Longest_Palindromic_Substring.cpp  Longest_Palindromic_Substring.h  Pascal_Triangle.cpp  Pascal_Triangle.h  README.md  Reverse_Integer.cpp  Reverse_Integer.h  Roman_To_Integer.cpp  Roman_To_Integer.h  Split_Array_into_Consecutive_Subsequences.cpp  Split_Array_into_Consecutive_Subsequences.h  Two_Sum.cpp  Two_Sum.h  main.cpp  palindrome.cpp  palindrome.h
