cmake_minimum_required(VERSION 3.15)
project(Algorithm)

set(CMAKE_CXX_STANDARD 11)

add_executable(Algorithm main.cpp Count_Primes.cpp Count_Primes.h Reverse_Integer.cpp Reverse_Integer.h Split_Array_into_Consecutive_Subsequences.cpp Split_Array_into_Consecutive_Subsequences.h Two_Sum.cpp Two_Sum.h palindrome.cpp palindrome.h Longest_Palindromic_Substring.cpp Longest_Palindromic_Substring.h Pascal_Triangle.cpp Pascal_Triangle.h Roman_To_Integer.cpp Roman_To_Integer.h)